<resources>
    <string name="app_name">Compartiendo el mundo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_experiencias">Mis Lugares Preferidos</string>
    <string name="Chats">Chats</string>
    <string name="sin_cuenta">¿No tienes cuenta?</string>
    <string name="Perfil">Perfil</string>
    <string name="titulo_perfil">Modifica tus Datos</string>
    <string name="Filtros">Filtros</string>
    <string name="publicaciones">PUBLICACIONES</string>
    <string name="redsocial">Instagram</string>
    <string name="image_description">Describe tu imagen</string>
    <string name="titulo_ppal">Realizar un Post</string>
    <string name="titulo_post">Lugar que Visitaste</string>
    <string name="lugar">Lugar</string>
    <string name="registrate">REGISTRATE</string>
    <string name="nombre_usuario">"Nombre de Usuario"</string>
    <string name="correo">"Correo electrónico"</string>
    <string name="pass">"Contraseña"</string>
    <string name="pass1">"Confirmar Contraseña"</string>
    <string name="descripcion">Describe tu experiencia...</string>
    <string name="presupuesto"> Presupuesto estimado (USD)</string>
    <string name="duracion">Duración del viaje (ej. 3 días) </string>
    <string name="publicar">Publicar</string>
    <string name="actualizar">Actualizar Perfil</string>
    <string name="transtionname_picture">transitionnamepicture</string>
    <string-array name="categorias_array">
        <item>Naturaleza</item>
        <item>Montaña</item>
        <item>Aventura</item>
        <item>Cultura</item>
        <item>Playa</item>
    </string-array>
    <string name="btnini">INICIAR SESION</string>
    <string name="home">Home</string>
    <string name="gesti_n_de_usuarios">GESTIÓN DE USUARIOS</string>
    <string name="id">ID</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="crear">Crear</string>
    <string name="leer">Leer</string>
    <string name="actualizar2">Actualizar</string>
    <string name="eliminar">Eliminar</string>
</resources>
