<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!-- Layout principal con orientación vertical -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Cabecera con diseño diagonal -->
        <io.github.florent37.shapeofview.shapes.DiagonalView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:shape_diagonal_angle="10"
            app:shape_diagonal_position="bottom">

            <!-- Fondo de color primario -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary" />

            <!-- Contenedor de elementos en la cabecera -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Título de la aplicación -->
                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorGray"
                    android:textSize="13sp" />

                <!-- Imagen principal -->
                <ImageView
                    android:id="@+id/iv_main_icon"
                    android:layout_width="220dp"
                    android:layout_height="180dp"
                    android:src="@drawable/icono_ppal"
                    android:padding="10dp" />
            </LinearLayout>
        </io.github.florent37.shapeofview.shapes.DiagonalView>

        <!-- Campo para el correo electrónico -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center">

            <!-- Ícono del correo -->
            <ImageView
                android:id="@+id/iv_email_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_email" />

            <!-- Campo de texto para el correo -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/correo"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Campo para la contraseña -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center">

            <!-- Ícono de candado -->
            <ImageView
                android:id="@+id/iv_lock_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_lock" />

            <!-- Campo de texto para la contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Botón de inicio de sesión -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnini"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/primary" />
    </LinearLayout>

    <!-- Pie con opciones de registro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp">

        <!-- Texto "¿Sin cuenta?" -->
        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_cuenta"
            android:textSize="17sp" />

        <!-- Texto "Regístrate" -->
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/registrate"
            android:textStyle="bold"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>