<?xml version="1.0" encoding="utf-8"?><!-- Layout principal usando CoordinatorLayout para permitir comportamientos de scroll avanzados -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserActivity">

    <!-- Contenedor principal que organiza todos los elementos verticalmente -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Encabezado con forma de arco usando la librería ShapeOfView -->
        <!-- El ArcView crea un efecto visual curvo en la parte inferior del header -->
        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">
            <!-- Fondo del header -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary" />
            <!-- Título de la sección -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/gesti_n_de_usuarios"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
            <!-- Ícono representativo de usuarios -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_person" />
        </io.github.florent37.shapeofview.shapes.ArcView>

        <!-- Sección de ID: Campo de solo lectura para mostrar el identificador del usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <!-- Ícono de ID -->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_id" />
            <!-- Campo de texto para ID usando Material Design -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/id"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Sección de nombre de usuario: Campo editable para el nombre del usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <!-- Ícono de usuario -->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_person_pin" />
            <!-- Campo de texto para nombre de usuario -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_de_usuario"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Sección de correo electrónico: Campo para ingresar el email del usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <!-- Ícono de email -->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_email" />
            <!-- Campo de texto para correo electrónico -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Sección de contraseña: Campo seguro para la contraseña del usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <!-- Ícono de contraseña -->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_lock" />
            <!-- Campo de texto para contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Grid de botones CRUD organizados en 2x2 -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:columnCount="2"
            android:padding="8dp"
            android:rowCount="2">

            <!-- Botón Crear: Inicia el proceso de creación de un nuevo usuario -->
            <Button
                android:id="@+id/btnCreateUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/primary"
                android:text="@string/crear"
                android:textColor="@color/white" />

            <!-- Botón Leer: Recupera y muestra la información del usuario -->
            <Button
                android:id="@+id/btnReadUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/primary"
                android:text="@string/leer"
                android:textColor="@color/white" />

            <!-- Botón Actualizar: Guarda los cambios realizados en el usuario -->
            <Button
                android:id="@+id/btnUpdateUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/primary"
                android:text="@string/actualizar2"
                android:textColor="@color/white" />

            <!-- Botón Eliminar: Elimina el usuario actual -->
            <Button
                android:id="@+id/btnDeleteUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/primary"
                android:text="@string/eliminar"
                android:textColor="@color/white" />
        </GridLayout>

    </LinearLayout>

    <!-- Botón de navegación: Permite regresar a la pantalla anterior -->
    <ImageView
        android:id="@+id/circleImageBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/circular_background"
        android:padding="7dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_left" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>